refactor(frontend/controller): limpieza, hilos daemon y correcciones